--- a/app/views/_toolbar.html.haml
+++ b/app/views/_toolbar.html.haml
@@ -8,7 +8,7 @@
 .toolbar-wrapper
   - case WulinMaster.config.button_mode
   - when 'merged'
-    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items
+    = render '/action_partials/toolbar/merged', toolbar_items: toolbar_items.sort { |item| item.global? ? -1 : 1 }
   - else
     = render '/action_partials/toolbar/global', toolbar_items: toolbar_items_global
     = render '/action_partials/toolbar/select', toolbar_items: toolbar_items_select
