MISC #141 - Let contenxt menu hide whenever it is blurred

--- a/app/assets/stylesheets/context_menu.scss
+++ b/app/assets/stylesheets/context_menu.scss
@@ -7,6 +7,9 @@
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.16), 0px 2px 5px rgba(0, 0, 0, 0.26);
 
   z-index: 99999;
+  &:focus {
+    outline: none;
+  }
 }
 
 #contextMenu li {
