--- a/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
@@ -5,24 +5,37 @@ No built-in (selected, editable, highlight, flashing, invalid, loading, :focus) 
 classes should alter those!
 */
 
-.slick-header.ui-state-default, .slick-headerrow.ui-state-default, .slick-footerrow.ui-state-default  {
+.slick-headerrow.ui-state-default, .slick-footerrow.ui-state-default  {
   width: 100%;
   overflow: hidden;
   border-left: 0px !important;
 }
 
-.slick-header-columns, .slick-headerrow-columns, .slick-footerrow-columns {
+.slick-header.ui-state-default {
+  width: 100%;
+  overflow-y: visible;
+  border-left: 0px !important;
+}
+
+.slick-headerrow-columns, .slick-footerrow-columns {
   position: relative;
   white-space: nowrap;
   cursor: default;
   overflow: hidden;
 }
 
+.slick-header-columns {
+  position: relative;
+  white-space: nowrap;
+  cursor: default;
+  overflow-y: visible;
+}
+
 .slick-header-column.ui-state-default {
   position: relative;
   display: inline-block;
   /*box-sizing: content-box !important; */
-  overflow: hidden;
+  overflow-y: visible;
   -o-text-overflow: ellipsis;
   text-overflow: ellipsis;
   height: 16px;
