MISC #154 - Override clear selection tag struct, make it similar with clear filter

--- a/app/assets/stylesheets/grid.color.scss
+++ b/app/assets/stylesheets/grid.color.scss
@@ -39,7 +39,7 @@ $wulin-colors: (
       }
     }
     .slick-pager {
-      .selection-info {
+      .selection {
         color: $color;
         a.clear {
           color: $color;
