MISC #156 - Use a generic name AppBarMenu for expansibility

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -48,7 +48,7 @@
 }
 
 .nav-wrapper {
-  #userMenu {
+  #appBarMenu {
     top: $nav-height !important;
     width: 209px !important;
     background-color: #ffffff;
