MISC #156 - Use current_user instead of User.current_user for resuability

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -48,7 +48,7 @@
 }
 
 .nav-wrapper {
-  #appBarMenu {
+  #userMenu {
     top: $nav-height !important;
     width: 209px !important;
     background-color: #ffffff;
