REFACTOR #156 - Renovate the app bar menu make it modulalbe

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -4,7 +4,7 @@
   padding-left: 20px;
 }
 
-#ActivityMenu-list {
+#activity_menu-list {
   width: $activity-list-width !important;
   top: $nav-height !important;
   li {
@@ -48,7 +48,7 @@
 }
 
 .nav-wrapper {
-  #UserMenu-list {
+  #user_menu-list {
     top: $nav-height !important;
     width: 209px !important;
     background-color: #ffffff;
