--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -34,6 +34,7 @@ nav {
   background-color: transparent !important;
   box-shadow: none;
   padding: 0;
+  margin-bottom: 4px;
 }
 
 //////////////////
