FEATURE #157 - Implement the logo above the menu

--- a/app/views/_menu.html.haml
+++ b/app/views/_menu.html.haml
@@ -1,6 +1,9 @@
 :ruby
   menu = controller&.menu || menu
 #navigation
+  - if WulinMaster.config.logo_file_name.present?
+    #app-logo
+      = image_tag WulinMaster.config.logo_file_name, alt: 'qatar'
   #menu
     %ul
       - menu.each do |menu_entry|
