--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -9,13 +9,21 @@
   font-size: $font-size-small;
   border-right: 1px solid $border-color;
   background: color('grey', 'lighten-5');
+  display: flex;
+  flex-direction: column;
+  #app-logo {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & > img {
+      height: 150px;
+      width: 150px;
+    }
+  }
   #menu {
-    position: absolute;
+    margin-top: 20px;
     overflow-y: auto;
-    right: 0;
-    left: 0px;
-    top: 20px;
-    bottom: 0;
 
     ul {
       margin-top: 2px;
@@ -78,7 +86,8 @@
           }
 
           li.active {
-            a, a:hover {
+            a,
+            a:hover {
               color: $menu-item-active-color;
               .material-icons {
                 color: $menu-item-active-color;
@@ -89,8 +98,6 @@
               opacity: 1;
             }
           }
-
-
         }
       }
     }
