--- a/app/views/edit_form.html.haml
+++ b/app/views/edit_form.html.haml
@@ -1,1 +1,1 @@
-= render '/form'
+= render partial: '/form', locals: { type: 'edit', title_preix: 'Update', action: 'update',button_name: 'Update', name: 'update' }
