MISC ekohe/hbs/bss_core#30 - Fix typo

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -6,7 +6,7 @@
   end
   object = grid.model.new
   is_new = params["action"] === 'wulin_master_new_form'
-  title = "#{title_preix} #{model_name.titleize}"
+  title = "#{title_prefix} #{model_name.titleize}"
 .create_form{:id => "#{grid.name}_form", :title => title, data: {action: action}}
   %h5.title= title
   = form_for object, :url => grid.path do |form|
