--- a/app/views/new_form.html.haml
+++ b/app/views/new_form.html.haml
@@ -1,1 +1,1 @@
-= render partial: '/form', locals: { type: 'new', title_preix: 'Create new', action: 'create' }
+= render partial: '/form', locals: { type: 'new', title_prefix: 'Create new', action: 'create' }
