--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -31,14 +31,17 @@ form {
     }
     .field {
       width: 100%;
-      input, textarea {
+      input,
+      textarea {
         color: $text-color;
         font-size: $font-size-small;
       }
-      input[type=text]:not(.browser-default) {
+      input[type='text']:not(.browser-default) {
         height: 36px;
       }
-      input[data-date=true], input[data-time=true], input[data-datetime=true] {
+      input[data-date='true'],
+      input[data-time='true'],
+      input[data-datetime='true'] {
         display: block;
         margin-bottom: 5px;
       }
@@ -57,7 +60,7 @@ form {
     padding: $form-submit-padding 0;
   }
 }
-.checkboxMargin{
+.checkboxMargin {
   margin: 15px auto;
 }
 
@@ -81,7 +84,9 @@ form {
     border-left: 4px solid white !important;
     border-right: 4px solid white !important;
   }
-  > input, textarea, .chosen-container {
+  > input,
+  textarea,
+  .chosen-container {
     border: 2px solid #eee;
     padding: 12px 16px 14px;
     width: calc(100% - 2.5rem);
@@ -90,7 +95,8 @@ form {
     border-radius: 4px;
     transition: box-shadow, border-color 0.15s;
   }
-  > input, textarea {
+  > input,
+  textarea {
     &:focus:not([readonly]) {
       border-color: $main-color;
     }
