BUG #165 - Fix the setting.scss.erb not found issue

--- a/app/assets/stylesheets/master.sass
+++ b/app/assets/stylesheets/master.sass
@@ -1,4 +1,4 @@
-@import 'setting'
+@import 'setting/setting'
 @import 'materialize/components/color-variables'
 $primary-color: color(#{$color-theme}, 'lighten-2') !default
 $secondary-color: color(#{$color-theme}, 'base') !default
