MISC ekohe/hbs/mima#19 - Avoid render the JS when current_grid is nil

--- a/app/views/action_partials/toolbar/_select.html.haml
+++ b/app/views/action_partials/toolbar/_select.html.haml
@@ -17,9 +17,11 @@
             = item.title
 
 :javascript
-  $(function(){
-    $('.dropdown-trigger').dropdown({alignment: 'right'});
-    $("[data-type='more_vert_item']").off('click').on('click', function(e) {
-      $("#" + $(e.target).data('id')).click()
+  if ("#{current_grid.nil?}" !== 'true') {
+    $(function(){
+      $('.dropdown-trigger').dropdown({alignment: 'right'});
+      $("[data-type='more_vert_item']").off('click').on('click', function(e) {
+        $("#" + $(e.target).data('id')).click()
+      })
     })
-  })
+  }
