--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -177,3 +177,7 @@
         %input.btn{:id => "#{grid.name}_submit_continue", :name => "commit", :type => "submit", :value => " Create and Continue "}/
       - else
         %input.btn{id: "#{grid.name}_batch_#{name}", class: "#{name}_btn", name: "commit", type: "submit", value: "  #{button_name}  "}/
+:javascript
+   if ($('#modal-footer').children().length == 0) {
+    $('.submit').appendTo($('#modal-footer'))
+  }
