--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -24,9 +24,9 @@ form {
     width: 100%;
     left: 0px;
     background-color: white;
-    height: 80px;
+    height: 70px;
     padding-left: 30px;
-    padding-top: 25px;
+    padding-top: 22px;
     box-shadow:0 0 2px lightgrey;
   }
   form {
@@ -76,6 +76,8 @@ form {
 }
 
 .input-field.input-outlined {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   &:focus-within > label {
     color: $main-color;
     z-index: 1000;
@@ -118,5 +120,11 @@ form {
     display: inline-flex;
     width: auto !important;
     top: 0.5rem;
+  }
+}
+
+.modal-footer {
+  .color-blue {
+    color: #2196F3
   }
 }
