--- a/app/assets/stylesheets/menu.scss
+++ b/app/assets/stylesheets/menu.scss
@@ -17,19 +17,18 @@
     overflow-y: auto;
 
     ul {
-      margin-top: 2px;
       margin-bottom: $menu-padding;
       // Menu groups
       li.submenu {
+        margin-bottom:20px;
         a {
-          font-size: 12px;
+          font-size: 13px;
           padding-left: 24px;
           text-transform: uppercase;
           color: $text-color;
         }
         // Second level menu
         ul {
-          margin-top: 4px;
           li.item {
             display: block;
             position: relative;
@@ -48,12 +47,13 @@
               color: color('grey', 'darken-4');
               align-items: center;
               padding-left: 24px;
-              padding-top: 7px;
-              padding-bottom: 11px;
+              padding-top: 4px;
+              padding-bottom: 2px;
+              font-weight: 250;
 
               span {
-                padding-left: $menu-padding;
-                font-size: 14px;
+                padding-left: 10px;
+                font-size: 13px;
               }
             }
 
