reduce create/edit form field padding and change field front-size

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -13,6 +13,7 @@ $filter-color: color('green', 'base');
 
 $font-size-tiny: 10px;
 $font-size-small: 12px;
+$font-size-small-middle: 14px;
 $font-size-middle: 16px;
 $font-size-large: 20px;
 
