--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -93,7 +93,7 @@ nav {
       margin-bottom: 24px;
     }
     p {
-      font-size: $font-size-middle;
+      font-size: $font-size-small-middle;
     }
   }
   .modal-footer {
